LMS Salesforce project/force-app/main/default/objects/Enrollment__c/fields/EnrollmentDate__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentDate__c</fullName>
    <label>EnrollmentDate</label>
    <type>Date</type>
</CustomField>