LMS Salesforce project/force-app/main/default/objects/Enrollment__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Instructor</label>
    <referenceTo>Instructor__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>