LMS Salesforce project/force-app/main/default/objects/Enrollment__c/fields/Instructor_Name__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Name__c</fullName>
    <label>Instructor Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>